[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ressources/GlobalTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Ressources/Ground.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/SoulCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ressources/InnerWalls.tres" type="TileSet" id=4]
[ext_resource path="res://Images/StairsEnd.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Light.tscn" type="PackedScene" id=8]
[ext_resource path="res://Ressources/Themes/GameTheme.tres" type="Theme" id=9]
[ext_resource path="res://Scenes/Switch.tscn" type="PackedScene" id=10]

[node name="Level4" type="Node2D"]
script = ExtResource( 7 )
next_level = "res://Scenes/Levels/Level5.tscn"

[node name="Map" type="Node2D" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Ground" type="TileMap" parent="Map"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 2, 1, 65538, 2, 4, 65539, 2, 4, 65540, 2, 0, 65541, 2, 1, 65542, 2, 4, 65543, 2, 0, 65544, 2, 1, 65545, 2, 0, 65546, 2, 4, 65547, 2, 0, 65548, 2, 0, 65549, 2, 3, 65550, 2, 1, 65551, 2, 3, 65552, 2, 2, 65553, 2, 1, 65554, 2, 4, 65555, 2, 1, 65556, 2, 2, 65557, 2, 0, 65558, 2, 2, 65559, 2, 4, 131073, 2, 2, 131074, 2, 3, 131075, 2, 3, 131076, 2, 4, 131077, 2, 0, 131078, 2, 3, 131079, 2, 2, 131080, 2, 1, 131081, 2, 2, 131082, 2, 4, 131083, 2, 1, 131084, 2, 3, 131085, 2, 4, 131086, 2, 1, 131087, 2, 3, 131088, 2, 0, 131089, 2, 4, 131090, 2, 2, 131091, 2, 2, 131092, 2, 2, 131093, 2, 1, 131094, 2, 2, 131095, 2, 0, 196609, 2, 1, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 3, 196614, 2, 1, 196615, 2, 0, 196616, 2, 4, 196617, 2, 4, 196618, 2, 1, 196619, 2, 0, 196620, 2, 4, 196621, 2, 0, 196622, 2, 4, 196623, 2, 1, 196624, 2, 1, 196625, 2, 0, 196626, 2, 0, 196627, 2, 2, 196628, 2, 4, 196629, 2, 4, 196630, 2, 3, 196631, 2, 1, 262145, 2, 3, 262146, 2, 2, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 4, 262151, 2, 0, 262152, 2, 2, 262153, 2, 2, 262154, 2, 2, 262155, 2, 2, 262156, 2, 2, 262157, 2, 3, 262158, 2, 2, 262159, 2, 0, 262160, 2, 0, 262161, 2, 4, 262162, 2, 3, 262163, 2, 0, 262164, 2, 1, 262165, 2, 3, 262166, 2, 0, 262167, 2, 1, 327681, 1, 1, 327682, 1, 1, 327683, 1, 1, 327684, 1, 1, 327685, 1, 1, 327686, 1, 1, 327687, 1, 1, 327688, 1, 1, 327689, 1, 1, 327690, 1, 1, 327691, 1, 1, 327692, 1, 1, 327693, 1, 1, 327694, 1, 1, 327695, 1, 1, 327696, 1, 1, 327697, 1, 1, 327698, 1, 1, 327699, 1, 1, 327700, 1, 1, 327701, 1, 1, 327702, 1, 1, 327703, 1, 1, 393217, 1, 1, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 4, 393237, 1, 4, 393238, 1, 4, 393239, 1, 1, 458753, 1, 1, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 4, 458773, 1, 4, 458774, 1, 4, 458775, 1, 1, 524289, 1, 1, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 4, 524309, 1, 4, 524310, 1, 4, 524311, 1, 1, 589825, 1, 1, 589826, 1, 1, 589827, 1, 1, 589828, 1, 1, 589829, 1, 1, 589830, 1, 1, 589831, 1, 1, 589832, 1, 1, 589833, 1, 1, 589834, 1, 1, 589835, 1, 1, 589836, 1, 1, 589837, 1, 1, 589838, 1, 1, 589839, 1, 1, 589840, 1, 1, 589841, 1, 1, 589842, 1, 1, 589843, 1, 1, 589844, 1, 1, 589845, 1, 1, 589846, 1, 1, 589847, 1, 1, 655361, 2, 2, 655362, 2, 2, 655363, 2, 2, 655364, 2, 1, 655365, 2, 3, 655366, 2, 0, 655367, 2, 4, 655368, 2, 1, 655369, 2, 4, 655370, 2, 4, 655371, 2, 4, 655372, 2, 0, 655373, 2, 3, 655374, 2, 3, 655375, 2, 2, 655376, 2, 0, 655377, 2, 4, 655378, 2, 4, 655379, 2, 2, 655380, 2, 1, 655381, 2, 2, 655382, 2, 4, 655383, 2, 3, 720897, 2, 0, 720898, 2, 2, 720899, 2, 4, 720900, 2, 3, 720901, 2, 3, 720902, 2, 4, 720903, 2, 2, 720904, 2, 3, 720905, 2, 0, 720906, 2, 1, 720907, 2, 0, 720908, 2, 1, 720909, 2, 1, 720910, 2, 2, 720911, 2, 2, 720912, 2, 4, 720913, 2, 3, 720914, 2, 4, 720915, 2, 1, 720916, 2, 2, 720917, 2, 2, 720918, 2, 1, 720919, 2, 1, 786433, 2, 4, 786434, 2, 2, 786435, 2, 2, 786436, 2, 1, 786437, 2, 3, 786438, 2, 4, 786439, 2, 1, 786440, 2, 2, 786441, 2, 2, 786442, 2, 3, 786443, 2, 4, 786444, 2, 4, 786445, 2, 1, 786446, 2, 4, 786447, 2, 2, 786448, 2, 4, 786449, 2, 1, 786450, 2, 0, 786451, 2, 1, 786452, 2, 3, 786453, 2, 4, 786454, 2, 3, 786455, 2, 1, 851969, 2, 1, 851970, 2, 3, 851971, 2, 3, 851972, 2, 2, 851973, 2, 1, 851974, 2, 4, 851975, 2, 3, 851976, 2, 3, 851977, 2, 3, 851978, 2, 1, 851979, 2, 1, 851980, 2, 2, 851981, 2, 1, 851982, 2, 2, 851983, 2, 4, 851984, 2, 2, 851985, 2, 0, 851986, 2, 4, 851987, 2, 1, 851988, 2, 2, 851989, 2, 0, 851990, 2, 4, 851991, 2, 3, 917505, 2, 2, 917506, 2, 0, 917507, 2, 3, 917508, 2, 3, 917509, 2, 0, 917510, 2, 3, 917511, 2, 1, 917512, 2, 1, 917513, 2, 0, 917514, 2, 4, 917515, 2, 1, 917516, 2, 2, 917517, 2, 3, 917518, 2, 2, 917519, 2, 2, 917520, 2, 2, 917521, 2, 0, 917522, 2, 3, 917523, 2, 4, 917524, 2, 4, 917525, 2, 2, 917526, 2, 3, 917527, 2, 2, 983041, 2, 1, 983042, 2, 4, 983043, 2, 1, 983044, 2, 0, 983045, 2, 1, 983046, 2, 4, 983047, 2, 1, 983048, 2, 0, 983049, 2, 4, 983050, 2, 3, 983051, 2, 4, 983052, 2, 3, 983053, 2, 4, 983054, 2, 4, 983055, 2, 4, 983056, 2, 2, 983057, 2, 3, 983058, 2, 3, 983059, 2, 2, 983060, 2, 0, 983061, 2, 4, 983062, 2, 4, 983063, 2, 4, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 2, 1048580, 2, 1, 1048581, 2, 4, 1048582, 2, 1, 1048583, 2, 0, 1048584, 2, 2, 1048585, 2, 3, 1048586, 2, 3, 1048587, 2, 0, 1048588, 2, 1, 1048589, 2, 1, 1048590, 2, 3, 1048591, 2, 4, 1048592, 2, 4, 1048593, 2, 0, 1048594, 2, 1, 1048595, 2, 4, 1048596, 2, 1, 1048597, 2, 0, 1048598, 2, 2, 1048599, 2, 3, 1114113, 2, 4, 1114114, 2, 2, 1114115, 2, 0, 1114116, 2, 3, 1114117, 2, 4, 1114118, 2, 2, 1114119, 2, 4, 1114120, 2, 3, 1114121, 2, 2, 1114122, 2, 3, 1114123, 2, 3, 1114124, 2, 1, 1114125, 2, 0, 1114126, 2, 2, 1114127, 2, 4, 1114128, 2, 2, 1114129, 2, 3, 1114130, 2, 1, 1114131, 2, 2, 1114132, 2, 1, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="InnerWalls" type="TileMap" parent="Map"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 327681, 0, 3, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 1, 327691, 0, 1, 327692, 0, 1, 327693, 0, 1, 327694, 0, 1, 327695, 0, 1, 327696, 0, 1, 327697, 0, 1, 327698, 0, 1, 327699, 0, 1, 327700, 0, 1, 327701, 0, 1, 327702, 0, 1, 327703, 0, 4, 393217, 0, 65538, 393239, 0, 65538, 458753, 0, 65538, 458775, 0, 65538, 524289, 0, 65538, 524311, 0, 65538, 589825, 0, 65539, 589826, 0, 1, 589827, 0, 1, 589828, 0, 1, 589829, 0, 1, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 1, 589840, 0, 1, 589841, 0, 1, 589842, 0, 1, 589843, 0, 1, 589844, 0, 1, 589845, 0, 1, 589846, 0, 1, 589847, 0, 65540 )
__meta__ = {
"_edit_lock_": true
}

[node name="OuterWalls" type="TileMap" parent="Map"]
modulate = Color( 0.34902, 0.360784, 0.478431, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 2, 10, 1, 2, 8, 2, 2, 8, 3, 2, 8, 4, 2, 8, 5, 2, 8, 6, 2, 8, 7, 2, 8, 8, 2, 8, 9, 2, 8, 10, 2, 8, 11, 2, 8, 12, 2, 8, 13, 2, 8, 14, 2, 8, 15, 2, 8, 16, 2, 8, 17, 2, 8, 18, 2, 8, 19, 2, 8, 20, 2, 8, 21, 2, 8, 22, 2, 8, 23, 2, 8, 24, 2, 11, 65536, 2, 65545, 65560, 2, 65545, 131072, 2, 65545, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131096, 2, 65545, 196608, 2, 65545, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196632, 2, 65545, 262144, 2, 12, 262145, 2, 8, 262146, 2, 8, 262147, 2, 8, 262148, 2, 8, 262149, 2, 8, 262150, 2, 8, 262151, 2, 8, 262152, 2, 8, 262153, 2, 8, 262154, 2, 8, 262155, 2, 8, 262156, 2, 8, 262157, 2, 8, 262158, 2, 8, 262159, 2, 8, 262160, 2, 8, 262161, 2, 8, 262162, 2, 8, 262163, 2, 8, 262164, 2, 8, 262165, 2, 8, 262166, 2, 8, 262167, 2, 8, 262168, 2, 65548, 327680, 2, 65545, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327704, 2, 65545, 393216, 2, 65545, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393240, 2, 65545, 458752, 2, 65545, 458776, 2, 65545, 524288, 2, 65545, 524312, 2, 65545, 589824, 2, 65545, 589848, 2, 65545, 655360, 2, 12, 655361, 2, 8, 655362, 2, 8, 655363, 2, 8, 655364, 2, 8, 655365, 2, 8, 655366, 2, 8, 655367, 2, 8, 655368, 2, 8, 655369, 2, 8, 655370, 2, 8, 655371, 2, 8, 655372, 2, 8, 655373, 2, 8, 655374, 2, 8, 655375, 2, 8, 655376, 2, 8, 655377, 2, 8, 655378, 2, 8, 655379, 2, 8, 655380, 2, 8, 655381, 2, 8, 655382, 2, 8, 655383, 2, 8, 655384, 2, 65548, 720896, 2, 65545, 720920, 2, 65545, 786432, 2, 65545, 786456, 2, 65545, 851968, 2, 65545, 851992, 2, 65545, 917504, 2, 65545, 917528, 2, 65545, 983040, 2, 65545, 983064, 2, 65545, 1048576, 2, 65545, 1048600, 2, 65545, 1114112, 2, 65545, 1114136, 2, 65545, 1179648, 2, 65546, 1179649, 2, 8, 1179650, 2, 8, 1179651, 2, 8, 1179652, 2, 8, 1179653, 2, 8, 1179654, 2, 8, 1179655, 2, 8, 1179656, 2, 8, 1179657, 2, 8, 1179658, 2, 8, 1179659, 2, 8, 1179660, 2, 8, 1179661, 2, 8, 1179662, 2, 8, 1179663, 2, 8, 1179664, 2, 8, 1179665, 2, 8, 1179666, 2, 8, 1179667, 2, 8, 1179668, 2, 8, 1179669, 2, 8, 1179670, 2, 8, 1179671, 2, 8, 1179672, 2, 65547 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spawn" type="Sprite" parent="Map"]
unique_name_in_owner = true
position = Vector2( 56, 120 )
texture = ExtResource( 5 )

[node name="Exit" parent="Map" instance=ExtResource( 6 )]
position = Vector2( 344, 120 )

[node name="Objects" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Light2" parent="Objects" instance=ExtResource( 8 )]
position = Vector2( 168, 120 )

[node name="Light3" parent="Objects" instance=ExtResource( 8 )]
position = Vector2( 264, 120 )

[node name="Switch" parent="Objects" instance=ExtResource( 10 )]
position = Vector2( 104, 104 )
torch_node_name = "Light2"

[node name="Switch2" parent="Objects" instance=ExtResource( 10 )]
position = Vector2( 216, 104 )
torch_node_name = "Light3"

[node name="SoulCharacter" parent="." instance=ExtResource( 3 )]
unique_name_in_owner = true
position = Vector2( 56, 120 )

[node name="TextUi" type="Control" parent="."]
unique_name_in_owner = true
visible = false
margin_right = 800.0
margin_bottom = 600.0
theme = ExtResource( 9 )

[node name="Panel" type="Panel" parent="TextUi"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 72.0
margin_top = 88.0
margin_right = 328.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="TextUi/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -54.5
margin_right = 131.0
margin_bottom = 54.5
text = "Level 4.

Sometimes, you can switch off a light.

(Try to walk on those switches.)

Press Space to close"
align = 1

[connection signal="body_entered" from="Map/Exit" to="." method="_on_Exit_body_entered"]
[connection signal="switch_activated" from="Objects/Switch" to="." method="_on_Switch_activated"]
[connection signal="switch_desactivated" from="Objects/Switch" to="." method="_on_Switch_desactivated"]
[connection signal="switch_activated" from="Objects/Switch2" to="." method="_on_Switch_activated"]
[connection signal="switch_desactivated" from="Objects/Switch2" to="." method="_on_Switch_desactivated"]
